add read, delete and edit functionality

--- a/views/flights/edit.ejs
+++ b/views/flights/edit.ejs
@@ -5,31 +5,37 @@
 <main>
   <h1><%= title %></h1>
   <form id="new-form" action="/flights/<%= flight._id %>?_method=PUT" method="POST">
-    <label for="title-input">Route:</label>
-    <input type="text" name="title" value="<%= flight.route %>" id="title-input">
-    <label for="release-year-input">:</label>
-    <input 
-      type="text" 
-      name="releaseYear"
-      value="<%= movie.releaseYear %>"
-      id="release-year-input"
-    >
-    <label for="mpaa-rating-select">MPAA Rating</label>
-    <select name="mpaaRating" id="mpaa-rating-select" >
-      <option value="<%= movie.mpaaRating %>"><%= movie.mpaaRating %></option>
-      <option value="G">G</option>
-      <option value="PG">PG</option>
-      <option value="PG-13">PG-13</option>
-      <option value="R">R</option>
+    <label for="route-input">Route:</label>
+    <input type="text" name="route" id="route-input"   value="<%= flight.route %>">
+
+
+    <label for="flightNum-input">Flight Num:</label>
+    <input type="number" name="flightNum" id="flightNum-input"   value="<%= flight.flightNum %>">
+
+
+    <label for="airline-select">Airline</label>
+    <select name="airline" id="airline-select">
+      <option   value="<%= flight.airline %>"><%= flight.airline %></option>
+      <option value="Ariana">Ariana</option>
+      <option value="KamAir">KamAir</option>
+      <option value="Bakhtar">Bakhtar</option>
+      <option value="Turkish">Turkish</option>
     </select>
-    <label for="now-showing-checkbox">Now Showing:</label>
-    <input 
-      type="checkbox"
-      name="nowShowing"
-      <%= movie.nowShowing ? 'checked' : '' %>
-      id="now-showing-checkbox"
-    >
-    <button type="submit">Save Movie</button>
+
+    <label for="airport-select">Airport</label>
+    <option   value="<%= flight.airport %>"><%= flight.airport %></option>
+    <select name="airport" id="airport-select">
+      <option value="KBL">KBL</option>
+      <option value="HRT">HRT</option>
+      <option value="BLK">BLK</option>
+      <option value="DBX">DBX</option>
+    </select>
+
+    
+    
+    <label for="departs-input">Departs</label>
+    <input type="datetime-local" name="departs" id="departs-input" value="<%= flight.departs %> ">
+    <button type="submit">Save Flight</button>
   </form>
 </main>
 
