--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -8,7 +8,7 @@
     <thead>
       <tr>
         <th>route</th>
-        <th>Flight No</th>
+        <th>Flight Num</th>
         <th>Airline</th>
         <th>Airport</th>
         <th>Departs</th>
@@ -20,19 +20,18 @@
       <% flights.forEach((flight) => { %>
       <tr>
         <td><%= flight.route %></td>
-        <td><%= flight.flightNo %></td>
+        <td><%= flight.flightNum %></td>
         <td><%= flight.airline %></td>
         <td><%= flight.airport %></td>
         <td><%= flight.departs %></td>
+  
+        <td><a href="/flights/<%= flight._id %>">DETAILS</a></td>
 
-
-        <td><a href="/flights/<%= flights._id %>">DETAILS</a></td>
         <td>
-          <!-- <form action="/movies/<%= movie._id %>?_method=DELETE" method="POST">r -->
+          <form action="/flights/<%= flight._id %>?_method=DELETE" method="POST">
             <button>X</button>
           </form>
         </td>
-      </tr>
       <% }) %>
     </tbody>
   </table>
