--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,10 +1,11 @@
 <%- include('../partials/html-head') %>
-<link rel="stylesheet" href="/stylesheets/flights/new.css" />
+<link rel="stylesheet" href="/css/flights/new.css" />
 <%- include('../partials/nav') %>
 
 <main>
-  <h1><%= title %></h1>
+ 
   <form id="new-form" action="/flights" method="POST">
+    <h1><%= title %></h1>
     <label for="route-input">Route:</label>
     <input type="text" name="route" id="route-input">
 
