--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 </head>
 <body>
   <nav>
-		<i class="fas fa-film fa-2x"></i>  
+    <i><img src="/public/Images/view-of-a-low-flying-plane-above.jpg" alt=""></i>
     <a 
       href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>
     >ADD Flight</a>
